Add VM setup instructions and image in experiment1.html

--- a/experiment1.html
+++ b/experiment1.html
@@ -65,6 +65,13 @@ Containers virtualize at OS level and share the host kernel.
 </ul>
 
 <h3>Experiment Setup – Part A: Virtual Machine</h3>
+<pre>
+vagrant --version
+</pre>
+
+<img src="images/vagrant-version.png" width="800">
+
+<h4>Create and Start VM</h4>
 
 <pre>
 vagrant init ubuntu/jammy64
