Update image source in experiment1.html

--- a/experiment1.html
+++ b/experiment1.html
@@ -75,7 +75,7 @@ vagrant --version
 
 <pre>
 vagrant init ubuntu/jammy64
-<img src=".png" width="800">
+<img src="Screenshot 2026-02-06 122343.png" width="800">
 vagrant up
 vagrant ssh
 sudo apt install -y nginx
