--- a/experiment1.html
+++ b/experiment1.html
@@ -69,7 +69,7 @@ Containers virtualize at OS level and share the host kernel.
 vagrant --version
 </pre>
 
-<img src="Screenshot 2026-02-06 122343.png" width="800">
+<img src="s2.png" width="800">
 
 <h4>Create and Start VM</h4>
 
