--- a/experiment1.html
+++ b/experiment1.html
@@ -69,13 +69,13 @@ Containers virtualize at OS level and share the host kernel.
 vagrant --version
 </pre>
 
-<img src="s2.png" width="800">
+<img src="vagrant-version.png" width="800">
 
 <h4>Create and Start VM</h4>
 
 <pre>
 vagrant init ubuntu/jammy64
-<img src="Screenshot 2026-02-06 122343.png" width="800">
+<img src="s2.png" width="800">
 vagrant up
 vagrant ssh
 sudo apt install -y nginx
