--- a/experiment1.html
+++ b/experiment1.html
@@ -9,78 +9,82 @@
 <hr>
 
 <p><b>Name:</b> Rishiraj Singh</p>
-<p><b>SAP ID:</b>500123612</p>
+<p><b>SAP ID:</b> 500123612</p>
 <p><b>Batch:</b> B3 (CCVT)</p>
 
 <h2>Lab – Experiment 1</h2>
 
 <h3>Objective</h3>
 <ul>
-<li>To understand the conceptual and practical differences between Virtual Machines and Containers.</li>
-<li>To install and configure a Virtual Machine using VirtualBox and Vagrant on Windows.</li>
-<li>To install and configure Containers using Docker inside WSL.</li>
-<li>To deploy an Ubuntu-based Nginx web server in both environments.</li>
-<li>To compare resource utilization, performance, and operational characteristics.</li>
+    <li>To understand the conceptual and practical differences between Virtual Machines and Containers.</li>
+    <li>To install and configure a Virtual Machine using VirtualBox and Vagrant on Windows.</li>
+    <li>To install and configure Containers using Docker inside WSL.</li>
+    <li>To deploy an Ubuntu-based Nginx web server in both environments.</li>
+    <li>To compare resource utilization, performance, and operational characteristics.</li>
 </ul>
 
 <h3>Software and Hardware Requirements</h3>
 
 <h4>Hardware</h4>
 <ul>
-<li>64-bit system with virtualization enabled</li>
-<li>Minimum 8 GB RAM (4 GB acceptable)</li>
-<li>Internet connection</li>
+    <li>64-bit system with virtualization enabled</li>
+    <li>Minimum 8 GB RAM (4 GB acceptable)</li>
+    <li>Internet connection</li>
 </ul>
 
 <h4>Software (Windows)</h4>
 <ul>
-<li>Oracle VirtualBox</li>
-<li>Vagrant</li>
-<li>WSL 2</li>
-<li>Ubuntu (WSL)</li>
-<li>Docker Engine</li>
+    <li>Oracle VirtualBox</li>
+    <li>Vagrant</li>
+    <li>WSL 2</li>
+    <li>Ubuntu (WSL)</li>
+    <li>Docker Engine</li>
 </ul>
 
 <h3>Theory</h3>
 
 <h4>Virtual Machine</h4>
 <p>
-A Virtual Machine emulates a complete physical system with its own OS and runs on a hypervisor.
+A Virtual Machine emulates a complete physical system with its own operating system and runs on a hypervisor.
 </p>
 <ul>
-<li>Full OS</li>
-<li>High resource usage</li>
-<li>Strong isolation</li>
-<li>Slow startup</li>
+    <li>Full OS</li>
+    <li>High resource usage</li>
+    <li>Strong isolation</li>
+    <li>Slow startup</li>
 </ul>
 
 <h4>Container</h4>
 <p>
-Containers virtualize at OS level and share the host kernel.
+Containers virtualize at the OS level and share the host kernel.
 </p>
 <ul>
-<li>Lightweight</li>
-<li>Fast startup</li>
-<li>Efficient resource usage</li>
+    <li>Lightweight</li>
+    <li>Fast startup</li>
+    <li>Efficient resource usage</li>
 </ul>
 
 <h3>Experiment Setup – Part A: Virtual Machine</h3>
+
+<h4>Verify Vagrant Installation</h4>
+
 <pre>
 vagrant --version
 </pre>
 
-<img src="vagrant-version.png" width="800">
+<img src="images/vagrant-version.png" width="800" alt="Vagrant Version Output">
 
-<h4>Create and Start VM</h4>
+<h4>Create and Start Virtual Machine</h4>
 
 <pre>
 vagrant init ubuntu/jammy64
-<img src="s2.png" width="800">
 vagrant up
 vagrant ssh
 sudo apt install -y nginx
 curl localhost
 </pre>
+
+<img src="images/s2.png" width="800" alt="VM Setup Output">
 
 <h3>Experiment Setup – Part B: Containers</h3>
 
@@ -92,19 +96,19 @@ curl localhost:8080
 
 <h3>Result</h3>
 <p>
-Containers are more lightweight and efficient, while VMs provide stronger isolation.
+Containers are more lightweight and resource-efficient compared to virtual machines, while virtual machines provide stronger isolation.
 </p>
 
 <h3>Conclusion</h3>
 <p>
-VMs suit full OS isolation; containers suit fast deployment and microservices.
+Virtual Machines are suitable for full OS isolation, whereas containers are ideal for fast deployment and microservices.
 </p>
 
 <h3>References</h3>
 <ul>
-<li>VirtualBox Documentation</li>
-<li>Vagrant Documentation</li>
-<li>Docker Documentation</li>
+    <li>VirtualBox Documentation</li>
+    <li>Vagrant Documentation</li>
+    <li>Docker Documentation</li>
 </ul>
 
 </body>
