Add image for VM Setup Output in experiment1.html

--- a/experiment1.html
+++ b/experiment1.html
@@ -85,7 +85,7 @@ curl localhost
 </pre>
 
 <img src="images/s2.png" width="800" alt="VM Setup Output">
-
+<img src="images/s3.png" width="800" alt="VM Setup Output">
 <h3>Experiment Setup – Part B: Containers</h3>
 
 <pre>
