Add images for VM setup output in experiment1.html
Added multiple images to the experiment1.html file for VM setup output.

--- a/experiment1.html
+++ b/experiment1.html
@@ -86,6 +86,15 @@ curl localhost
 
 <img src="images/s2.png" width="800" alt="VM Setup Output">
 <img src="images/s3.png" width="800" alt="VM Setup Output">
+<img src="images/s4.png" width="800" alt="VM Setup Output">
+<img src="images/s5.png" width="800" alt="VM Setup Output">
+<img src="images/s6.png" width="800" alt="VM Setup Output">
+<img src="images/s7.png" width="800" alt="VM Setup Output">
+<img src="images/s8.png" width="800" alt="VM Setup Output">
+<img src="images/s9.png" width="800" alt="VM Setup Output">
+<img src="images/s10.png" width="800" alt="VM Setup Output">
+<img src="images/s11.png" width="800" alt="VM Setup Output">
+
 <h3>Experiment Setup – Part B: Containers</h3>
 
 <pre>
