--- a/experiment1.html
+++ b/experiment1.html
@@ -107,19 +107,29 @@ docker pull ubuntu
 docker run -d -p 8080:80 --name nginx-container nginx
 curl localhost:8080
 </pre>
-
+<img src="images/s12.png" width="800" alt="VM Setup Output">
+<img src="images/s13.png" width="800" alt="VM Setup Output">
+<img src="images/s14.png" width="800" alt="VM Setup Output">
+<img src="images/s15.png" width="800" alt="VM Setup Output">
+<img src="images/s16.png" width="800" alt="VM Setup Output">
+<img src="images/s17.png" width="800" alt="VM Setup Output">
+<img src="images/s18.png" width="800" alt="VM Setup Output">
 
 <h3>Resource Utilization Observation</h3>
 <pre>
 free -h
 htop
 systemd-analyze
+</pre>
+<img src="images/m1.png" width="800" alt="VM Setup Output">
+
 <h3>Container Observation Commands</h3>
 <pre>
 docker stats
 free -h
-    
 </pre>
+<img src="images/m2.png" width="800" alt="VM Setup Output">
+<img src="images/m3.png" width="800" alt="VM Setup Output">
 <h3>Result</h3>
 <p>
 Containers are more lightweight and resource-efficient compared to virtual machines, while virtual machines provide stronger isolation.
