--- a/devops-lab/EXP2/experiment2.html
+++ b/devops-lab/EXP2/experiment2.html
@@ -27,7 +27,7 @@
 <pre>
 docker pull nginx
 </pre>
-<img src="images/s1.png" width="800" alt="Docker Pull Nginx">
+<img src="images/a1.png" width="800" alt="Docker Pull Nginx">
 
 <h4>Step 2: Run Container with Port Mapping</h4>
 <pre>
