--- a/devops-lab/EXP2/experiment2.html
+++ b/devops-lab/EXP2/experiment2.html
@@ -33,26 +33,26 @@ docker pull nginx
 <pre>
 docker run -d -p 8080:80 nginx
 </pre>
-<img src="images/s2.png" width="800" alt="Docker Run Nginx">
+<img src="images/a2.png" width="800" alt="Docker Run Nginx">
 
 <h4>Step 3: Verify Running Containers</h4>
 <pre>
 docker ps
 </pre>
-<img src="images/s3.png" width="800" alt="Docker PS Output">
+<img src="images/a3.png" width="800" alt="Docker PS Output">
 
 <h4>Step 4: Stop and Remove Container</h4>
 <pre>
 docker stop &lt;container_id&gt;
 docker rm &lt;container_id&gt;
 </pre>
-<img src="images/s4.png" width="800" alt="Docker Stop and Remove">
+<img src="images/a4.png" width="800" alt="Docker Stop and Remove">
 
 <h4>Step 5: Remove Docker Image</h4>
 <pre>
 docker rmi nginx
 </pre>
-<img src="images/s5.png" width="800" alt="Docker Remove Image">
+<img src="images/a5.png" width="800" alt="Docker Remove Image">
 
 <h3>Result</h3>
 <p>
