--- a/docker-assignment-1/index.html
+++ b/docker-assignment-1/index.html
@@ -1,1 +1,52 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Docker Containerization Assignment</title>
+    <style>
+        body {
+            font-family: Arial;
+            margin: 40px;
+            background: #f4f6f8;
+        }
+        h1 {
+            color: #0b7285;
+        }
+        .box {
+            background: white;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+        }
+        a {
+            color: blue;
+        }
+    </style>
+</head>
+<body>
 
+<div class="box">
+<h1>Docker Containerization Assignment</h1>
+
+<p><b>Name:</b> Rishiraj Singh</p>
+<p><b>Branch:</b> B.Tech CSE (CCVT)</p>
+
+<h2>Project Components</h2>
+<ul>
+<li>Backend: Node.js</li>
+<li>Database: PostgreSQL</li>
+<li>Docker Compose</li>
+<li>Macvlan Network</li>
+</ul>
+
+<h2>Repository Link</h2>
+<a href="https://github.com/rishiraj570/containerization-devops-/tree/main/docker-assignment-1">
+View Assignment Files
+</a>
+
+<h2>Screenshots</h2>
+<p>Screenshots are available in screenshots folder.</p>
+
+</div>
+
+</body>
+</html>
